--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>শব্দ</title>
-  <!-- Bootstrap CSS -->
+  <title>শব্দ কুইজ</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -13,11 +12,10 @@
     }
     .quiz-card {
       max-width: 500px;
-      margin: 40px auto;
-      padding: 20px;
+      margin: 30px auto;
+      padding: 25px 20px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      transition: transform 0.5s ease, opacity 0.5s ease;
     }
     .word {
       font-size: 40px;
@@ -29,146 +27,148 @@
       font-size: 20px;
       font-weight: 600;
     }
-    /* সোয়াইপ অ্যানিমেশন */
-    .swipe-out {
-      transform: translateX(-100%);
-      opacity: 0;
+    .btn-group-custom {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
     }
-    .swipe-in {
-      transform: translateX(100%);
-      opacity: 0;
-    }
-    .swipe-in-active {
-      transform: translateX(0);
-      opacity: 1;
+    .review-card {
+      max-width: 500px;
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      background: #fff3cd;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Quiz Card -->
-    <div id="quizCard" class="card quiz-card text-center">
-      <div class="card-body">
-        <div id="word" class="word">লোড হচ্ছে...</div>
+<div class="container">
 
-        <div class="d-grid gap-2">
-          <button class="btn btn-primary" onclick="checkAnswer('তৎসম')">তৎসম</button>
-          <button class="btn btn-primary" onclick="checkAnswer('তদ্ভব')">তদ্ভব</button>
-          <button class="btn btn-primary" onclick="checkAnswer('অর্ধ-তৎসম')">অর্ধ-তৎসম</button>
-          <button class="btn btn-primary" onclick="checkAnswer('দেশি')">দেশি</button>
-          <button class="btn btn-primary" onclick="checkAnswer('বিদেশি')">বিদেশি</button>
-        </div>
+  <!-- Quiz Card -->
+  <div id="quizCard" class="card quiz-card text-center">
+    <div class="card-body">
+      <div id="word" class="word">লোড হচ্ছে...</div>
 
-        <div class="result" id="result"></div>
-        <button class="btn btn-success mt-3" onclick="animateNext()">পরের শব্দ</button>
+      <div class="btn-group-custom">
+        <button class="btn btn-primary flex-fill" onclick="checkAnswer('তৎসম')">তৎসম</button>
+        <button class="btn btn-success flex-fill" onclick="checkAnswer('তদ্ভব')">তদ্ভব</button>
+        <button class="btn btn-warning flex-fill" onclick="checkAnswer('অর্ধ-তৎসম')">অর্ধ-তৎসম</button>
+        <button class="btn btn-info flex-fill" onclick="checkAnswer('দেশি')">দেশি</button>
+        <button class="btn btn-danger flex-fill" onclick="checkAnswer('বিদেশি')">বিদেশি</button>
       </div>
-    </div>
 
-    <!-- Score Card -->
-    <div class="card quiz-card text-center">
-      <div class="card-body">
-        <h5 class="card-title">📊 স্কোর</h5>
-        <p id="score">সঠিক: 0 | ভুল: 0 | মোট: 0</p>
-      </div>
+      <div class="result" id="result"></div>
+      <button class="btn btn-secondary mt-3" onclick="nextWord()">পরের শব্দ</button>
+      <button class="btn btn-dark mt-3" onclick="showReview()">রিভিউ</button>
     </div>
   </div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Score Card -->
+  <div class="card quiz-card text-center">
+    <div class="card-body">
+      <h5 class="card-title">📊 স্কোর</h5>
+      <p id="score">সঠিক: 0 | ভুল: 0 | মোট: 0</p>
+    </div>
+  </div>
 
-  <script>
-    const words = [
-      // তৎসম
-      { text: "চন্দ্র", type: "তৎসম" },
-      { text: "সূর্য", type: "তৎসম" },
-      { text: "নক্ষত্র", type: "তৎসম" },
-      { text: "ভবন", type: "তৎসম" },
-      { text: "ধর্ম", type: "তৎসম" },
-      { text: "পাত্র", type: "তৎসম" },
-      { text: "মনুষ্য", type: "তৎসম" },
+  <!-- Review Section -->
+  <div id="reviewSection" class="review-card d-none">
+    <h5>📝 রিভিউ</h5>
+    <p id="reviewSummary"></p>
+    <ul id="wrongList"></ul>
+  </div>
 
-      // তদ্ভব
-      { text: "হাত", type: "তদ্ভব" },
-      { text: "চামার", type: "তদ্ভব" },
+</div>
 
-      // অর্ধ-তৎসম
-      { text: "জ্যোছনা", type: "অর্ধ-তৎসম" },
-      { text: "ছেরাদ্দ", type: "অর্ধ-তৎসম" },
-      { text: "গিন্নী", type: "অর্ধ-তৎসম" },
-      { text: "বোষ্টম", type: "অর্ধ-তৎসম" },
-      { text: "কুচ্ছিত", type: "অর্ধ-তৎসম" },
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+const words = [
+  { text: "চন্দ্র", type: "তৎসম" },
+  { text: "সূর্য", type: "তৎসম" },
+  { text: "নক্ষত্র", type: "তৎসম" },
+  { text: "ভবন", type: "তৎসম" },
+  { text: "ধর্ম", type: "তৎসম" },
+  { text: "পাত্র", type: "তৎসম" },
+  { text: "মনুষ্য", type: "তৎসম" },
+  { text: "হাত", type: "তদ্ভব" },
+  { text: "চামার", type: "তদ্ভব" },
+  { text: "জ্যোছনা", type: "অর্ধ-তৎসম" },
+  { text: "ছেরাদ্দ", type: "অর্ধ-তৎসম" },
+  { text: "গিন্নী", type: "অর্ধ-তৎসম" },
+  { text: "বোষ্টম", type: "অর্ধ-তৎসম" },
+  { text: "কুচ্ছিত", type: "অর্ধ-তৎসম" },
+  { text: "কুড়ি", type: "দেশি" },
+  { text: "পেট", type: "দেশি" },
+  { text: "চুলা", type: "দেশি" },
+  { text: "কুলা", type: "দেশি" },
+  { text: "গঞ্জ", type: "দেশি" },
+  { text: "চোঙ্গা", type: "দেশি" },
+  { text: "টোপর", type: "দেশি" },
+  { text: "ডাব", type: "দেশি" },
+  { text: "ডাগর", type: "দেশি" },
+  { text: "ঢেঁকি", type: "দেশি" }
+];
 
-      // দেশি শব্দ
-      { text: "কুড়ি", type: "দেশি" },
-      { text: "পেট", type: "দেশি" },
-      { text: "চুলা", type: "দেশি" },
-      { text: "কুলা", type: "দেশি" },
-      { text: "গঞ্জ", type: "দেশি" },
-      { text: "চোঙ্গা", type: "দেশি" },
-      { text: "টোপর", type: "দেশি" },
-      { text: "ডাব", type: "দেশি" },
-      { text: "ডাগর", type: "দেশি" },
-      { text: "ঢেঁকি", type: "দেশি" }
-    ];
+let currentWord = null;
+let correct = 0;
+let wrong = 0;
+let total = 0;
+let wrongAnswers = [];
 
-    let currentWord = null;
-    let correct = 0;
-    let wrong = 0;
-    let total = 0;
+function updateScore() {
+  document.getElementById("score").innerText =
+    `সঠিক: ${correct} | ভুল: ${wrong} | মোট: ${total}`;
+}
 
-    function updateScore() {
-      document.getElementById("score").innerText =
-        `সঠিক: ${correct} | ভুল: ${wrong} | মোট: ${total}`;
-    }
+function nextWord() {
+  const randomIndex = Math.floor(Math.random() * words.length);
+  currentWord = words[randomIndex];
+  document.getElementById("word").innerText = currentWord.text;
+  document.getElementById("result").innerText = "";
+}
 
-    function nextWord() {
-      const randomIndex = Math.floor(Math.random() * words.length);
-      currentWord = words[randomIndex];
-      document.getElementById("word").innerText = currentWord.text;
-      document.getElementById("result").innerText = "";
-      document.getElementById("result").style.color = "";
-    }
+function checkAnswer(choice) {
+  if (!currentWord) return;
+  total++;
+  const result = document.getElementById("result");
 
-    function checkAnswer(choice) {
-      if (!currentWord) return;
-      const result = document.getElementById("result");
-      total++;
-      if (choice === currentWord.type) {
-        correct++;
-        result.innerText = "✅ সঠিক উত্তর!";
-        result.style.color = "green";
-      } else {
-        wrong++;
-        result.innerText = "❌ ভুল! সঠিক উত্তর: " + currentWord.type;
-        result.style.color = "red";
-      }
-      updateScore();
-    }
+  if (choice === currentWord.type) {
+    correct++;
+    result.innerText = "✅ সঠিক উত্তর!";
+    result.style.color = "green";
+  } else {
+    wrong++;
+    result.innerText = `❌ ভুল! সঠিক উত্তর: ${currentWord.type}`;
+    result.style.color = "red";
+    wrongAnswers.push({ word: currentWord.text, correct: currentWord.type });
+  }
+  updateScore();
+}
 
-    // অ্যানিমেশন সহ নেক্সট
-    function animateNext() {
-      const card = document.getElementById("quizCard");
-      card.classList.add("swipe-out");
+function showReview() {
+  const review = document.getElementById("reviewSection");
+  const summary = document.getElementById("reviewSummary");
+  const list = document.getElementById("wrongList");
+  review.classList.remove("d-none");
 
-      setTimeout(() => {
-        nextWord();
-        card.classList.remove("swipe-out");
-        card.classList.add("swipe-in");
+  const wrongPercent = total === 0 ? 0 : Math.round((wrong/total)*100);
+  summary.innerHTML = `সঠিক: ${correct} | ভুল: ${wrong} | মোট: ${total} | ভুলের শতাংশ: ${wrongPercent}%`;
 
-        setTimeout(() => {
-          card.classList.remove("swipe-in");
-          card.classList.add("swipe-in-active");
+  list.innerHTML = "";
+  if(wrongAnswers.length === 0){
+    list.innerHTML = "<li>সবকিছু ঠিক আছে।</li>";
+  } else {
+    wrongAnswers.forEach(item => {
+      list.innerHTML += `<li>${item.word} → সঠিক: ${item.correct}</li>`;
+    });
+  }
+}
 
-          setTimeout(() => {
-            card.classList.remove("swipe-in-active");
-          }, 500);
-        }, 50);
-      }, 500);
-    }
-
-    // প্রথম শব্দ লোড
-    updateScore();
-    nextWord();
-  </script>
+// প্রথম শব্দ লোড
+updateScore();
+nextWord();
+</script>
 </body>
 </html>
