--- a/index.html
+++ b/index.html
@@ -102,9 +102,112 @@ const words = [
 ];
 
 const originWords = [
-  { text: "চা", language: "চীনা" },
-  { text: "লুঙ্গি", language: "বার্মা" },
-  { text: "আফিম" ,  language: "ইংরেজি" }
+  { "text": "আল্লাহ", "language": "আরবি" },
+  { "text": "ইসলাম", "language": "আরবি" },
+   { "text": "ঈমান", "language": "আরবি" },
+  { "text": "ওজু", "language": "আরবি" },
+  { "text": "কোরবানি", "language": "আরবি" },
+  { "text": "কুরআন", "language": "আরবি" },
+  { "text": "জান্নাত", "language": "আরবি" },
+  { "text": "জাহান্নাম", "language": "আরবি" },
+  { "text": "তসবি", "language": "আরবি" },
+  { "text": "জাকাত", "language": "আরবি" },
+  { "text": "হজ", "language": "আরবি" },
+  { "text": "হাদিস", "language": "আরবি" },
+  { "text": "হারাম", "language": "আরবি" },
+  { "text": "হালাল", "language": "আরবি" },
+  { "text": "আদালত", "language": "আরবি" },
+  { "text": "আলেম", "language": "আরবি" },
+  { "text": "ইনসান", "language": "আরবি" },
+  { "text": "ঈদ", "language": "আরবি" },
+  { "text": "উকিল", "language": "আরবি" },
+  { "text": "কানুন", "language": "আরবি" },
+  { "text": "কলম", "language": "আরবি" },
+  { "text": "কিতাব", "language": "আরবি" },
+  { "text": "কেচ্ছা", "language": "আরবি" },
+  { "text": "নগদ", "language": "আরবি" },
+  { "text": "বাকি", "language": "আরবি" },
+  { "text": "মহকুমা", "language": "আরবি" },
+  { "text": "মুন্সেফ", "language": "আরবি" },
+  { "text": "মোক্তার", "language": "আরবি" },
+  { "text": "খোদা", "language": "ফারসি" },
+  { "text": "গুনাহ", "language": "ফারসি" },
+  { "text": "নামাজ", "language": "ফারসি" },
+  { "text": "পয়গম্বর", "language": "ফারসি" },
+  { "text": "ফেরেশতা", "language": "ফারসি" },
+  { "text": "বেহেশত", "language": "ফারসি" },
+  { "text": "রোজা", "language": "ফারসি" },
+  { "text": "কারখানা", "language": "ফারসি" },
+  { "text": "চশমা", "language": "ফারসি" },
+  { "text": "জবানবন্দি", "language": "ফারসি" },
+  { "text": "তারিখ", "language": "ফারসি" },
+  { "text": "তোশক", "language": "ফারসি" },
+  { "text": "দফতর", "language": "ফারসি" },
+  { "text": "দোকান", "language": "ফারসি" },
+  { "text": "দস্তখত", "language": "ফারসি" },
+  { "text": "দৌলত", "language": "ফারসি" },
+  { "text": "বাদশাহ", "language": "ফারসি" },
+  { "text": "বেগম", "language": "ফারসি" },
+  { "text": "মেথর", "language": "ফারসি" },
+  { "text": "আদমি", "language": "ফারসি" },
+  { "text": "আমদানি", "language": "ফারসি" },
+  { "text": "জানোয়ার", "language": "ফারসি" },
+  { "text": "জিন্দা", "language": "ফারসি" },
+  { "text": "নমুনা", "language": "ফারসি" },
+  { "text": "বদমাশ", "language": "ফারসি" },
+  { "text": "রফতানি", "language": "ফারসি" },
+  { "text": "হাঙ্গামা", "language": "ফারসি" },
+  { "text": "ইউনিভার্সিটি", "language": "ইংরেজি" },
+  { "text": "ইউনিয়ন", "language": "ইংরেজি" },
+  { "text": "কলেজ", "language": "ইংরেজি" },
+  { "text": "টিন", "language": "ইংরেজি" },
+  { "text": "নভেল", "language": "ইংরেজি" },
+  { "text": "নোট", "language": "ইংরেজি" },
+  { "text": "পাউডার", "language": "ইংরেজি" },
+  { "text": "পেন্সিল", "language": "ইংরেজি" },
+  { "text": "ব্যাগ", "language": "ইংরেজি" },
+  { "text": "ফুটবল", "language": "ইংরেজি" },
+  { "text": "মাস্টার", "language": "ইংরেজি" },
+  { "text": "লাইব্রেরি", "language": "ইংরেজি" },
+  { "text": "স্কুল", "language": "ইংরেজি" },
+  { "text": "আফিম", "language": "ইংরেজি" },
+  { "text": "অফিস", "language": "ইংরেজি" },
+  { "text": "ইস্কুল", "language": "ইংরেজি" },
+  { "text": "বাক্স", "language": "ইংরেজি" },
+  { "text": "হাসপাতাল", "language": "ইংরেজি" },
+  { "text": "বোতল", "language": "ইংরেজি" },
+  { "text": "আনারস", "language": "পর্তুগিজ" },
+  { "text": "আলপিন", "language": "পর্তুগিজ" },
+  { "text": "আলমারি", "language": "পর্তুগিজ" },
+  { "text": "গির্জা", "language": "পর্তুগিজ" },
+  { "text": "গুদাম", "language": "পর্তুগিজ" },
+  { "text": "চাবি", "language": "পর্তুগিজ" },
+  { "text": "পাউরুটি", "language": "পর্তুগিজ" },
+  { "text": "পাদ্রি", "language": "পর্তুগিজ" },
+  { "text": "বালতি", "language": "পর্তুগিজ" },
+  { "text": "কার্তুজ", "language": "ফরাসি" },
+  { "text": "কুপন", "language": "ফরাসি" },
+  { "text": "ডিপো", "language": "ফরাসি" },
+  { "text": "রেস্তোরাঁ", "language": "ফরাসি" },
+  { "text": "ইস্কাপন", "language": "ওলন্দাজ" },
+  { "text": "টেক্কা", "language": "ওলন্দাজ" },
+  { "text": "তুরূপ", "language": "ওলন্দাজ" },
+  { "text": "রুইতন", "language": "ওলন্দাজ" },
+  { "text": "হরতন", "language": "ওলন্দাজ" },
+  { "text": "খন্দর", "language": "গুজরাটি" },
+  { "text": "হরতাল", "language": "গুজরাটি" },
+  { "text": "চাহিদা", "language": "পাঞ্জাবি" },
+  { "text": "শিখ", "language": "পাঞ্জাবি" },
+  { "text": "চাকর", "language": "তুর্কি" },
+  { "text": "চাকু", "language": "তুর্কি" },
+  { "text": "তোপ", "language": "তুর্কি" },
+  { "text": "দারোগা", "language": "তুর্কি" },
+  { "text": "চা", "language": "চীনা" },
+  { "text": "চিনি", "language": "চীনা" },
+  { "text": "ফুঙ্গি", "language": "বার্মিজ" },
+  { "text": "লুঙ্গি", "language": "বার্মিজ" },
+  { "text": "রিক্সা", "language": "জাপানি" },
+  { "text": "হারিকিরি", "language": "জাপানি" }
 ];
 
 // originWords MCQ অপশন আলাদা
@@ -174,7 +277,7 @@ function checkAnswer(btnElement) {
   const selectedType = btnElement.dataset.type || "";
 
   if(answered){
-    result.innerText = "⚠️ প্রশ্ন লক হয়েছে, পরবর্তী প্রশ্নে যান।";
+    result.innerText = "⚠️ একাধিক উত্তর গ্রহণযোগ্য নয়";
     result.style.color = "orange";
     return;
   }
